<resources>
    <!-- Category name for Cat Breeds [CHAR LIMIT=20] -->
    <string name="category_cat_breeds">Cat Breeds</string>
    <!-- Category name for find Cat Adoption [CHAR LIMIT=20] -->
    <string name="category_find_cat_adoption">Cat Adoption</string>
    <!-- Category name for find User Profile [CHAR LIMIT=20] -->
    <string name="category_find_user_adoption">Cat Adoption</string>
    <!-- Category name for Upload Animal [CHAR LIMIT=20] -->
    <string name="category_upload_animal">Upload Animal</string>
    <!-- Category name for Application Received [CHAR LIMIT=20] -->
    <string name="category_adoption_form_received">Adoption Form Received</string>

    <!-- Category name for Forgot Password [CHAR LIMIT=20] -->
    <string name="home">Home</string>
    <!-- Category name for Forgot Password [CHAR LIMIT=20] -->
    <string name="category_forgot_password">Reset Password</string>
    <!-- Category name for Sign Up [CHAR LIMIT=20] -->
    <string name="category_sign_up">Sign Up</string>

    <!-- String name for Cat Name [CHAR LIMIT=20] -->
    <string name="cat_upload_name">name</string>
    <!-- String name for Cat Gender in Animal Upload Category[CHAR LIMIT=20] -->
    <string name="cat_upload_gender_text">Gender</string>
    <!-- String name for Male Cat Gender in Animal Upload Category [CHAR LIMIT=20] -->
    <string name="cat_upload_gender_male_radio_button">male</string>
    <!-- String name for Female Cat Gender in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_gender_female_radio_button">female</string>
    <!-- String name for Cat Health Status in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_health_status">Health Status</string>
    <!-- String name for Cat Vaccine Status in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_vaccine_status">Vaccine</string>
    <!-- String name for Cat Spay/ Neuter Status in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_spay_neuter_status">Spay/ Neuter</string>
    <!-- String name for Cat Description in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_description">Description</string>
    <!-- String name for Upload Button in Animal Upload  Category [CHAR LIMIT=20] -->
    <string name="cat_upload_button">Upload</string>


    <!-- String name for Cat Gender in Cat Adoption Category[CHAR LIMIT=20] -->
    <string name="cat_adoption_province"></string>
    <!-- String name for Cat Gender in Cat Adoption Category[CHAR LIMIT=20] -->
    <string name="cat_adoption_city"></string>
    <!-- String name for Cat Gender in Cat Adoption Category[CHAR LIMIT=20] -->
    <string name="cat_adoption_gender_text">Gender</string>
    <!-- String name for Male Cat Gender in Cat Adoption Category [CHAR LIMIT=20] -->
    <string name="cat_adoption_gender_male_radio_button">male</string>
    <!-- String name for Female Cat Gender in Cat Adoption Category [CHAR LIMIT=20] -->
    <string name="cat_adoption_gender_female_radio_button">female</string>
    <!-- String name for Cat Health Status in Cat Adoption Category [CHAR LIMIT=20] -->
    <string name="cat_adoption_health_status">Health Status</string>
    <!-- String name for Cat Vaccine Status in Cat Adoption Category [CHAR LIMIT=20] -->
    <string name="cat_adoption_vaccine_status">Vaccine</string>
    <!-- String name for Cat Spay/ Neuter Status [CHAR LIMIT=20] -->
    <string name="cat_adoption_spay_neuter_status">Spay/ Neuter</string>


    <!-- String name for Phone in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_phone">Your phone number</string>
    <!-- String name for Email in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_email">Your email</string>
    <!-- String name for Job in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_job">Your job (optional)</string>
    <!-- String name for Address in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_address">Your address</string>
    <!-- String name for Reason in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_reason">Why do you want to adopt?</string>
    <!-- String name for Number of Animal in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_number_of_animal">How many other animal(s) at your home? Please Describe</string>
    <!-- String name for House Size in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_house_size">House Size (Approx. in m2)</string>
    <!-- String name for Number of People in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_number_of_people">number of people in your house</string>
    <!-- String name for Animal Place in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_animal_live">Where will the animals live in the house?</string>
    <!-- String name for Cat Condition in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_conditions">Have You considered these conditions before adopting?</string>
    <!-- String name for House Type in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_house_type_string">house type</string>
    <!-- String name for House Member Permission in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_house_member_permission_switch_text">House Member Permission</string>
    <!-- String name for Plan to Move in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_plan_to_move_switch_text">Plan to Move</string>
    <!-- String name for After Marriage Plan in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_after_marriage_plan_switch_text">After Marriage Plan</string>
    <!-- String name for Kid(s) in Your House in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_kids_in_the_house_switch_text">Kid(s) in Your House</string>
    <!-- String name for Financial Plan in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_financial_plan_switch_text">Your Financial Plan</string>
    <!-- String name for Checking Terms in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_checking_terms_text">Check here to indicate that you have read and agree to our terms</string>
    <!-- String name for Submit Button in Adoption Form [CHAR LIMIT=20] -->
    <string name="adoption_submit_button">submit</string>

    <string name="app_name">PRASIKU</string>
    <string name="sign_in_default">Sign In</string>
    <string name="sign_in_fb">Sign In with Facebook</string>
    <string name="sign_in_google">Sign In with Google </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>

    <string name="username">username</string>
    <string name="email">email</string>
    <string name="full_name">full name</string>
    <string name="password">password</string>
    <string name="province">province</string>
    <string name="city">city</string>
    <string name="sign_up_button">Register</string>

    <string name="password_reset">Enter Your Email</string>
    <string name="reset_button">reset your password</string>

    <string name="cat_adoption_search">search</string>
</resources>
